fix bug about gen-l

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "f:/sola_github/H43C/H43_github/测试用/Marlin-2.x.x/.pio/build/mks_robin_nano35/firmware.elf",
+            "executable": "f:/sola_github/H43C/H43_github/测试用/Marlin-2.x.x/Marlin-2.x.x/.pio/build/mks_robin_nano35/firmware.elf",
             "projectEnvName": "mks_robin_nano35",
             "toolchainBinDir": "C:/Users/Administrator.USER-20191219ZU/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "svdPath": "C:/Users/Administrator.USER-20191219ZU/.platformio/platforms/ststm32/misc/svd/STM32F103xx.svd",
@@ -26,7 +26,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "f:/sola_github/H43C/H43_github/测试用/Marlin-2.x.x/.pio/build/mks_robin_nano35/firmware.elf",
+            "executable": "f:/sola_github/H43C/H43_github/测试用/Marlin-2.x.x/Marlin-2.x.x/.pio/build/mks_robin_nano35/firmware.elf",
             "projectEnvName": "mks_robin_nano35",
             "toolchainBinDir": "C:/Users/Administrator.USER-20191219ZU/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "svdPath": "C:/Users/Administrator.USER-20191219ZU/.platformio/platforms/ststm32/misc/svd/STM32F103xx.svd",
